# caramell

./: .gitignore  .gitmodules  <  Cargo.toml  README.md  mosquitto.conf  moveAbiBindings.sh  topics.conf
.github/workflows/: rust.yml
caramell-client/: Cargo.toml
caramell-client/src/: main.rs
caramell-client/src/client_utils/: mod.rs
caramell-server/: Cargo.toml  README.md
caramell-server/src/: main.rs
caramell-server/src/server_utils/: mod.rs
caramell-server/src/utils/: mod.rs
createBindings/: Cargo.toml
createBindings/src/: main.rs
utils/: Cargo.toml
utils/src/: blockchain.rs  lib.rs  utils.rs
