[package]
name = "caramell-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
toml = "0.7.4"

[params]
broker_ip = "localhost"
broker_port = 1883
id = "client1"
