[package]
name = "caramell-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
toml = "0.7.4"
rocket = { version = "=0.5.0-rc.3", features = ["serde_json", "json"] }
ethers = "2.0.7"
ethers-providers = "2.0.7"
ethers-middleware = "2.0.7"
ethers-contract = "2.0.7"
serde_json = "1.0.99"

[params]
broker_ip = "localhost"
broker_port = 1883
id = "client1"

[blockchain]
rpc_url_http = "http://localhost:8545"
rpc_url_ws = "ws://localhost:8645"
contract_addr = "0x1B3f3bB300076758254899d6e277B0Fa5E834EfD"
contract_unowned_address = "0xFb0fF05A0CC7fE7944e3b4e9c6ade052daC6534C"
wallet_key = "0x01e0106d28df9ad6b700186d280a41cdd85c769b1fb50277f2b2239fa6064ca0"
