[package]
name = "caramell-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
memcache = "0.17.0"
memcached = "0.4.4"
rumqttc = "0.21.0"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
