[package]
name = "caramell-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
bytes = "1.4.0"
memcache = "0.17.0"
memcached = "0.4.4"
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
toml = "0.7.4"

[params]
cache_ip = "localhost"
cache_name = "Cache420"
cache_port = 11211
broker_ip = "localhost"
broker_port = 1883
id = "server1"
