[package]
name = "caramell-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils"}
bytes = "1.4.0"
memcache = "0.17.0"
memcached = "0.4.4"
rumqttc = "0.21.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
toml = "0.7.4"
ethers = { git = "https://github.com/thebigblase/ethers-rs", branch = "caramell" }
ethers-middleware = { git = "https://github.com/thebigblase/ethers-rs" }
ethers-providers = { git = "https://github.com/thebigblase/ethers-rs" }

[params]
cache_ip = "localhost"
cache_name = "Cache420"
cache_port = 11211
broker_ip = "localhost"
broker_port = 1883
id = "server1"

[blockchain]
rpc_url_http = "http://localhost:8545"
rpc_url_ws = "ws://localhost:8645"
contract_addr = "0x7Aa5a22f9F5263cEBFc98A9E22c91Dff043D7C9C"
contract_unowned_address = "0xFb0fF05A0CC7fE7944e3b4e9c6ade052daC6534C"
wallet_key = "0x01e0106d28df9ad6b700186d280a41cdd85c769b1fb50277f2b2239fa6064ca0"
