[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
ethers = { path = "../../ethers-rs/ethers"}
ethers-contract = { path = "../../ethers-rs/ethers-contract" }
ethers-middleware = { path = "../../ethers-rs/ethers-middleware" }
ethers-providers = { path = "../../ethers-rs/ethers-providers" }
memcache = "0.17.0"
primitive-types = "0.12.1"
rumqttc = "0.21.0"
serde = "1.0.163"
tokio = "1.28.2"
toml = "0.7.4"
