[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
ethers = { git = "https://github.com/thebigblase/ethers-rs", rev = "caramell-v2.0.7"}
ethers-providers = { git = "https://github.com/thebigblase/ethers-rs", rev = "caramell-v2.0.7"}
ethers-middleware = { git = "https://github.com/thebigblase/ethers-rs", rev = "caramell-v2.0.7"}
memcache = "0.17.0"
primitive-types = "0.12.1"
rumqttc = "0.21.0"
serde = "1.0.163"
tokio = "1.28.2"
toml = "0.7.4"
